--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,25 @@
+button{
+  border-radius: 10%;
+  height: 40px;
+}
+
+.container{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+}
+
 .animate {
   background-image: url("./assets/anime.png");
   height: 46px;
   width: 32px;
-  /* position: absolute; */
   background-repeat: no-repeat;
+  margin: 20px;
 }
 
 .buttonsBlock{
-
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
