--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,20 +1,37 @@
-button{
+* {
+  margin: 0;
+  padding: 0;
+}
+
+button {
   border-radius: 10%;
   height: 40px;
+  background-color: transparent;
+  color: #fff;
 }
 
-.container{
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
-background-image: url("./assets/forest.jpg");
-background-position: center;
-background-size: cover;
-padding: 18px;
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.heroSelect{
+.container {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("./assets/forest.jpg");
+  background-position: center;
+  background-size: cover;
+  padding: 10px;
+}
+
+.heroSelect {
   margin-bottom: 20px;
 }
 
@@ -26,8 +43,17 @@ padding: 18px;
   margin-bottom: 20px;
 }
 
-.buttonsBlock{
-display: flex;
-justify-content: space-between;
-align-items: center;
+.buttonsBlock {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+/* .image{
+  width: 16px;
+  height: 18px;
+  background-image: url("./assets/elipse.svg");
+  background-position: center;
+  background-size: contain;
+  opacity: .3;
+} */
